# Junqi-DRL

./: .gitignore  README.md  SETUP.md  pyproject.toml  setup_oscar.sh
configs/: drqn_spatial.yaml  drqn_test.yaml  drqn_train.yaml  drqn_train_standard.yaml  rppo_small.yaml  rppo_test.yaml  rppo_train.yaml  transformer_small.yaml  transformer_test.yaml  transformer_train.yaml
examples/: junqi_autoplay_example.py  junqi_standard_example.py  play_vs_agent.py  train_simple_q_learning.py
final_models/: transformer_final.pth
full_model_trained/transformer_small/: transformer_best_wr1.00_iter7200.pth
junqi_drl/agents/: __init__.py  base_agent.py  drql.py  junqi_transformer.py  random_agent.py  rppo.py  transformer_agent.py
junqi_drl/core/: __init__.py  config.py  metrics.py  replay_buffer.py
junqi_drl/game/: README.md  __init__.py  junqi_8x3.py  junqi_standard.py
junqi_drl/utils/: __init__.py  observation.py
models/: model.txt
scripts/: battle.py  demo_matchups.py  eval.py  eval_transformer.py  matchup_final_models.py  train_dqrl.py  train_from_config.py  train_rppo.py  train_transformer.py
slurm_scripts/: drqn.sh  rppo.sh  transformer.sh
